home.css
* {

  padding: 0;
  margin: 0;
  box-shadow: border-box;
}

html {

  scroll-behavior: smooth;
  margin: 0;
}



/*Fonts for Website */

@font-face {

  font-family: 'Blender Pro';
  src: url(fonts/BlenderPro-Bold.ttf);
  font-style: normal;
  font-weight: 200;
}

@font-face {

  font-family: 'Blender Pro';
  src: url(fonts/BlenderPro-Book.ttf);
  font-style: normal;
  font-weight: 100;

}


body {

  font-family: Blender Pro;
  padding: 0;
  margin: 0;
  height: 100%;
  overflow-x: hidden;
  background-image: url("Home Page/loop.gif");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
  background-attachment: fixed;
}


/* Text selection */

::selection {
background: #00F0FF; /* WebKit/Blink Browsers */
}
::-moz-selection {
background: #00F0FF; /* Gecko Browsers */
}


/* Hyperlinks */

.footer a:link {
color: #fff;
background-color: transparent;
text-decoration: underline;
}

.footer a:visited {
color: #fff;
background-color: transparent;
text-decoration: underline;
}

.footer a:hover {
color: #fff;
background-color: transparent;
text-decoration: underline;
}

.footer a:active {
color: #fff;
background-color: transparent;
text-decoration: underline;
}





/*Main Landing Page Text */

.text_header h1 {
  transition: .5s ease-in;
  display: flex;
  position: relative;
  color: #fff;
  font-weight: 200;
  font-size: 120px;
  margin: 0;
}


.text_header {

  display: flex;
  position: absolute;
  margin: 0;
  top: 370px;
  left: 280px;
  z-index: 1;
}


.glitch {
  position: relative;
  color: yellow;
  mix-blend-mode: lighten;
}

.glitch:before,.glitch:after {
  content: attr(data-text);
  position: absolute;
  top: 0;
  width: 100%;
  clip: rect(0, 0, 0, 0);
}

.glitch:before {
  left: -4px;
  text-shadow: 6px 0#FD3649;
}

.glitch:hover:before {
  text-shadow: 4px 0 #00ffc8;
  animation: glitch-anim-1 0.4s infinite ease-in-out alternate-reverse;
}

.glitch:after {
  left: 4px;
  text-shadow: -3px 0 #FCEE09;
}

.glitch:hover:after {
  text-shadow: -5px 0 #FCEE09;
  animation: glitch-anim-2 0.3s infinite ease-in-out alternate-reverse;
}

@keyframes glitch-anim-1 {
  0% {clip: rect(30px, 9999px, 10px, 0);}
  25% {clip: rect(15px, 9999px, 100px, 0);}
  50% {clip: rect(50px, 9999px, 105px, 0);}
  75% {clip: rect(2px, 9999px, 80px, 0);}
  100% {clip: rect(90px, 9999px, 100px, 0);}
}

@keyframes glitch-anim-2 {
  0% {
    top: -1px;
    left: 50px;
    clip: rect(65px, 9999px, 119px, 0);
  }
  25% {
    top: -10px;
    left: 1px;
    clip: rect(79px, 9999px, 19px, 0);
  }
  50% {
    top: -7px;
    left: 20px;
    clip: rect(65px, 9999px, 11px, 0);
  }
  75% {
    top: 10px;
    right: 20px;
    left: -50px;
    clip: rect(95px, 9999px, 53px, 0);
  }
  100% {
    top: -5px;
    left: -7px;
    clip: rect(31px, 9999px, 149px, 0);
  }
}



.tagline h2 {
  display: flex;
  position: absolute;
  font-family: Blender Pro;
  color: #fff;
  font-weight: 100;
  font-size: 25px;
  text-transform: uppercase;
  left: 283px;
  top: 530px;
}


/*Main Page Button */

.button_container {

  position: relative;
  left: 283px;
  top: 560px;

}

button,button::after{
  width: 190px;
  height:64px;
  font-size: 19px;
  text-align: center;
  margin: auto;
  font-family: Blender Pro;
  font-weight:100;
  background:linear-gradient(45deg,transparent 5%,#FD3649 5%);
  border:0;
  color:#fff;
  letter-spacing:3px;
  box-shadow:6px 0 0 #00E6F6;
  position:relative;
  cursor: pointer;

}
 
button::after{
   --slice-0:inset(50% 50% 50% 50%);
  --slice-1:inset(80% -6px 0 0);
  --slice-2:inset(50% -6px 30% 0);
  --slice-3:inset(10% -6px 85% 0);
  --slice-4:inset(40% -6px 43% 0);
  --slice-5:inset(80% -6px 5% 0);
  content:'RESUME_';
  display:block;
  position:absolute;
  left:0;
  top:0;
  background:linear-gradient(45deg,transparent 3%,#00E6F6 3%,#00E6F6 5%,#FD3649 3%);
  text-shadow: -3px -3px 0 #F8F005 , 3px 3px 0 #00E6F6;
  clip-path:var(--slice-0);
}
button:hover::after{
  animation: glitch 1s;
  animation-timing-function:steps(2,end);
}

@keyframes glitch {
  0% {
    clip-path: var(--slice-1);
    transform: translate(-20px, -10px);
  }
  
  10% {
    clip-path: var(--slice-3);
    transform: translate(10px, 10px);
  }
  
  20% {
    clip-path: var(--slice-1);
    transform: translate(-10px, 10px);
  }
  
  30% {
    clip-path: var(--slice-3);
    transform: translate(0px, 5px);
  }
  
  40% {
    clip-path: var(--slice-2);
    transform: translate(-5px, 0px);
  }
  
  50% {
    clip-path: var(--slice-3);
    transform: translate(5px, 0px);
  }
  
  60% {
    clip-path: var(--slice-4);
    transform: translate(5px, 10px);
  }
  
  70% {
    clip-path: var(--slice-2);
    transform: translate(-10px, 10px);
  }
  
  80% {
    clip-path: var(--slice-5);
    transform: translate(20px, -10px);
  }
  
  90% {
    clip-path: var(--slice-1);
    transform: translate(-10px, 0px);
  }
  
  100% {
    clip-path: var(--slice-1);
    transform: translate(0);
  }
}




/*Navigation */

nav {
  
  padding-top: 35px;
  text-align: center;
  
}

nav ul {
  display: block;
}

nav ul li {
  position: relative;
  display: inline-block;
  top: 10px;
}

nav ul li:not(:first-child) {
  margin-left: 48px;
}

nav ul li:last-child {
  margin-right: 24px;
}

nav ul li a {
  display: inline-block;
  outline: none;
  color: #fff;
  font-family: Blender Pro;
  text-decoration: none;
  font-size: 19px;
  text-transform: uppercase;
  letter-spacing: 1.2px;
  font-weight: 100;
  cursor: pointer;
}

nav ul li a:hover {

  color: #FCEE09;
  transition: 0.5s;
}

.nav-wrapper ul li:nth-child(1) a {

color: #FCEE09;
font-weight: 200;
}
/* ... */

